cannot fix gradient on mobile, use solid colour for now

--- a/src/assets/css/tailwind.pcss
+++ b/src/assets/css/tailwind.pcss
@@ -133,8 +133,8 @@
     margin-bottom: 1.75rem;
     font-size: 5rem;
     display: inline-flex;
-    background: rgb(93, 38, 193);
-    background: -moz-linear-gradient(
+    background: #9b32ff;
+    /* background: -moz-linear-gradient(
       to right,
       rgba(93, 38, 193, 1) 0%,
       rgba(161, 127, 224, 1) 40%,
@@ -152,7 +152,7 @@
       rgba(161, 127, 224, 1) 40%,
       rgba(89, 193, 115, 1) 100%
     );
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5d26c1",endColorstr="#59c173",GradientType=1);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5d26c1",endColorstr="#59c173",GradientType=1); */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
